# SQLite-per-MCP

./: .gitignore  DatenbankManuellAbfragen.py  README.md  claude_desktop_config.json  create_database.py  generate_config.py  pyproject.toml  schule.db
src/: index.py
